# codex-local-plugins

./: .gitignore  README.ko.md  README.md  codex-env.toml  pyproject.toml
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml
codex_env_sync/: __init__.py  apply.py  cli.py  manifest.py  platforms.py
docs/superpowers/plans/: 2026-04-10-first-party-skill-verification.md
hooks/: necessity-gate.json
instructions/: AGENTS.md
mydocs/orders/: 20260422T1317-order-jy-waterfall-skill.md
mydocs/tech/: 20260422T1328-decision-korean-github-metadata.md
mydocs/working/: 20260422T1323-result-jy-waterfall-skill.md
plugins/codex-env-core/.codex-plugin/: plugin.json
plugins/jy-env-core/.codex-plugin/: plugin.json
plugins/jy-env-core/hooks/: necessity_gate.py
references/official-docs/: 01-claude-code-skills.md  02a-spec-full.md  02b-official-skills-examples.md  02c-skills-ref-tools.md  03-claude-code-hooks.md  04-scheduled-tasks.md  05-cli-reference.md  skill-compliance-checklist.md
scripts/: bootstrap.ps1  bootstrap.sh
skill-tests/first-party/: README.md
skill-tests/first-party/ai-slop-remover/: README.md  baseline.md  pressure-scenarios.json  result-template.md
skill-tests/first-party/codebase-explore/: README.md  baseline.md  pressure-scenarios.json  result-template.md
skill-tests/first-party/codex-autoplan/: README.md  pressure-scenarios.json
tests/: test_apply.py  test_bootstrap_smoke.py  test_manifest.py  test_necessity_gate_hook.py  test_repo_bundle.py  test_skill_compliance.py  test_skill_scenarios.py
(+284 files in other folders)
